added netlify info

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "node": "14.x"
   },
   "scripts": {
-    "build": "tsc -p web/tsconfig.json"
+    "build": "tsc -p api/tsconfig.json --noEmit && tsc -p web/tsconfig.json"
   },
   "dependencies": {
+    "@netlify/functions": "1.4.0",
     "chrome-aws-lambda": "7.0.0",
     "marked": "4.0.10",
     "puppeteer-core": "13.1.2",
