--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,51 @@
 .now
-.vercel
-node_modules
 api/dist
 public/dist
-.netlify
 
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+/.idea/
+*.xml
+# testing
+/coverage
+# allowing commit of /src/gql/ until schema discovery exists, so everyone doesn't need
+# a current graphql server running locally
+# /src/gql/
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+*.idea
+.python-version
+/.netlify
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+.env
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+yarn.lock
