--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=16.9.1",
+    "node": ">=18.16.0",
     "yarn": ">=1.22.0",
     "npm": "please-use-yarn"
   },
@@ -17,29 +17,30 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
-    "@vercel/og": "0.0.27",
-    "next": "^13.1.1",
+    "@vercel/og": "0.6.2",
+    "next": "^13.5.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "webpack": "^5.91.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@commitlint/cli": "^17.3.0",
-    "@commitlint/config-conventional": "^17.3.0",
+    "@babel/core": "^7.24.4",
+    "@commitlint/cli": "^17.8.1",
+    "@commitlint/config-conventional": "^17.8.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "autoprefixer": "^10.4.13",
-    "babel-loader": "^8.2.4",
+    "autoprefixer": "^10.4.19",
+    "babel-loader": "^8.3.0",
     "cross-env": "^7.0.3",
     "eslint": "8.12.0",
-    "eslint-config-next": "^13.1.1",
-    "eslint-plugin-storybook": "^0.6.8",
-    "husky": "^8.0.2",
-    "postcss": "^8.4.20",
-    "prettier": "^2.8.1",
-    "sass": "^1.57.1",
-    "tailwindcss": "^3.2.4",
+    "eslint-config-next": "^13.5.6",
+    "eslint-plugin-storybook": "^0.6.15",
+    "husky": "^8.0.3",
+    "postcss": "^8.4.38",
+    "prettier": "^2.8.8",
+    "sass": "^1.75.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "4.9.4",
     "util": "^0.12.5"
   },
