[UI-1056] og-image upgrade/prettier pass
* match storefront node/next/react/react-dom versions
* treat lint warnings as errors
* match storefront prettier rules, run a pass

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,5 @@
 {
-  "extends": [
-    "plugin:storybook/recommended",
-    "next",
-    "next/core-web-vitals",
-    "eslint:recommended"
-  ],
+  "extends": ["plugin:storybook/recommended", "next", "next/core-web-vitals", "eslint:recommended"],
   "globals": {
     "React": "readonly"
   },
@@ -17,6 +12,7 @@
       }
     }
   ],
+  "plugins": ["only-error"],
   "rules": {
     "no-unused-vars": [1, { "args": "after-used", "argsIgnorePattern": "^_" }]
   }
