--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=18.16.0",
+    "node": ">=20.11.1",
     "yarn": ">=1.22.0",
     "npm": "please-use-yarn"
   },
@@ -16,33 +16,31 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
-    "@vercel/og": "0.6.2",
-    "next": "^13.5.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "webpack": "^5.91.0"
+    "@next/font": "14.2.15",
+    "@vercel/og": "0.6.5",
+    "next": "^14.2.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "webpack": "^5.98.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.4",
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "autoprefixer": "^10.4.19",
-    "babel-loader": "^8.3.0",
+    "@types/node": "^20.16.5",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "18.3.0",
+    "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
-    "eslint": "8.12.0",
-    "eslint-config-next": "^13.5.6",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.8",
+    "eslint-plugin-only-error": "^1.0.2",
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.3",
-    "postcss": "^8.4.38",
+    "postcss": "^8.5.3",
     "prettier": "^2.8.8",
-    "sass": "^1.75.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "4.9.4",
-    "util": "^0.12.5"
+    "sass": "^1.85.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.0.4"
   },
   "resolutions": {
     "webpack": "^5"
